2011-09-01 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Merge from trunk.

2011-08-31 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCtree_dec.hpp,
	  src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc:
	  Preparations for tree-decomposition-based spilllocation allocation.

2011-08-31 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Merge from trunk.

2011-08-30 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc:
	  Preparations for tree-decomposition-based spilllocation allocation.
	  
2011-08-30 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Merge from trunk.

2011-08-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Merge from trunk.

2011-08-23 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Merge from trunk.
	  
2011-07-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc,
	  src/SDCCtree_dec.hpp:
	  Minor code cleanup.
	  
2011-07-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Merge from trunk.

2011-07-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  src/SDCCicode.c:
	  Debug message cleanup.

2011-07-24 Philipp Klaus Krause <pkk AT spth.de>

	* Merge from trunk.

2011-07-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCbtree.h,
	  src/SDCCbtree.cc,
	  src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc,
	  src/z80/ralloc.c:
	  Use the block-tree based stack allocator for spilllocations, too (z80 and gbz80 only).

2011-07-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCbtree.cc,
	  src/SDCCralloc.hpp,
	  src/SDCCsymt.h,
	  src/SDCCtree_dec.hpp,
	  src/z80/ralloc2.cc,
	  src/z80/ralloc.c,
	  src/z80/ralloc.h,
	  src/z80/gen.c:
	  Minor code cleanup.
	  
2011-07-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
