@@ -10,6 +10,7 @@
 
 #include <stdbool.h>
 
+#ifndef SDCC_hc08
 #ifdef __bool_true_false_are_defined
 
 union USUINT {
@@ -90,13 +91,16 @@ NotZero (unsigned int t)
 }
 
 #endif //__bool_true_false_are_defined
+#endif
 
 void
 testBug (void)
 {
+#ifndef SDCC_hc08
 #ifdef __bool_true_false_are_defined
     rx_index = 1;
     ASSERT (VerifyCRC ());
     ASSERT (NotZero (300));
 #endif //__bool_true_false_are_defined
+#endif
 }
