@@ -1,3 +1,10 @@
+2011-09-02 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* Merge from trunk,
+	* src/SDCCralloc.hpp,
+	  src/z80/ralloc2.cc:
+	  Preparations for tree-decomposition-based spilllocation allocation and Chaitin-style spilllocation allocation.
+	  
 2011-09-01 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* Merge from trunk.
